[package]
name = "vsecm-sdk-rust"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for VMware Tanzu Secrets Manager"
license = "Apache-2.0"
repository = "https://github.com/vmware-tanzu/secrets-manager"
documentation = "https://docs.rs/vsecm-sdk-rust"
readme = "README.md"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
spiffe = "0.6.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
mockall = { version = "0.11", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[features]
testing = ["mockall"]